// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="TournamentSettings-root-103"
>
  <div
    className="MuiPaper-root-109 MuiPaper-elevation1-112 MuiPaper-rounded-110 MuiCard-root-108 TournamentSettings-card-104"
  >
    
    
    <div
      className="MuiCardContent-root-136 TournamentSettings-content-105"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 MuiFormControl-fullWidth-140 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-name"
        >
           Name
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={false}
            className="MuiInput-input-159"
            defaultValue=""
            disabled={false}
            id="tournament-name"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 MuiFormControl-fullWidth-140 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-description"
        >
          Description
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159"
            defaultValue=""
            disabled={false}
            id="tournament-description"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-category"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Category
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select or Type...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-5-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
          data-shrink={true}
          htmlFor="tournament-date"
        >
          Date
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue=""
            disabled={false}
            id="tournament-date"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="date"
            value={undefined}
          />
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-pairingMethod"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Pairing Method
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-6-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-pairingMethodInitial"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Initial Pairing Method
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-7-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-podSizeMinimum"
        >
          Minimum Pod Size
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue={0}
            disabled={false}
            id="tournament-podSizeMinimum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="number"
            value={undefined}
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-podSizeMaximum"
        >
          Maximum Pod Size
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue={0}
            disabled={false}
            id="tournament-podSizeMaximum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="number"
            value={undefined}
          />
        </div>
      </div>
    </div>
    <hr
      className="MuiDivider-root-174"
    />
    <div
      className="MuiCardActions-root-178"
    />
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="TournamentSettings-root-103"
>
  <div
    className="MuiPaper-root-109 MuiPaper-elevation1-112 MuiPaper-rounded-110 MuiCard-root-108 TournamentSettings-card-104"
  >
    <div
      className="MuiCardHeader-root-205"
    >
      <div
        className="MuiCardHeader-content-208"
      >
        <span
          className="MuiTypography-root-180 MuiTypography-headline-185 MuiCardHeader-title-209"
        >
          test
        </span>
      </div>
    </div>
    <hr
      className="MuiDivider-root-174"
    />
    <div
      className="MuiCardContent-root-136 TournamentSettings-content-105"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 MuiFormControl-fullWidth-140 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-name"
        >
           Name
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={false}
            className="MuiInput-input-159"
            defaultValue="test0"
            disabled={false}
            id="tournament-name"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 MuiFormControl-fullWidth-140 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-description"
        >
          Description
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159"
            defaultValue="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tellus nunc. Etiam urna tortor, laoreet vitae commodo porttitor, mattis id purus."
            disabled={false}
            id="tournament-description"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-category"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Category
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select or Type...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-5-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
          data-shrink={true}
          htmlFor="tournament-date"
        >
          Date
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue={2018-01-01T00:00:00.000Z}
            disabled={false}
            id="tournament-date"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="date"
            value={undefined}
          />
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-pairingMethod"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Pairing Method
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-6-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-10nd86i TournamentSettings-field-106"
        id="tournament-pairingMethodInitial"
        onKeyDown={[Function]}
      >
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-137 MuiFormControl-fullWidth-140"
        >
          <label
            className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145 MuiInputLabel-shrink-144"
            data-shrink={true}
            htmlFor={undefined}
          >
            Initial Pairing Method
          </label>
          <div
            className="MuiInput-root-151 MuiInput-fullWidth-158 MuiInput-formControl-152 MuiInput-underline-155"
          >
            <div
              aria-invalid={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-159 IntegrationReactSelect-input-165"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              placeholder={undefined}
              readOnly={undefined}
              required={false}
              rows={undefined}
              type="text"
              value={undefined}
            >
              <div
                className="IntegrationReactSelect-valueContainer-166"
              >
                <p
                  className="MuiTypography-root-180 MuiTypography-body1-189 MuiTypography-colorTextSecondary-203 IntegrationReactSelect-placeholder-171"
                >
                  Select...
                </p>
                <div
                  className="css-1hrkh7z"
                >
                  <div
                    className=""
                    style={
                      Object {
                        "display": "inline-block",
                      }
                    }
                  >
                    <input
                      aria-autocomplete="list"
                      aria-label={undefined}
                      aria-labelledby={undefined}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className={undefined}
                      disabled={false}
                      id="react-select-7-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      spellCheck="false"
                      style={
                        Object {
                          "background": 0,
                          "border": 0,
                          "boxSizing": "content-box",
                          "color": "inherit",
                          "fontSize": "inherit",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "1px",
                        }
                      }
                      tabIndex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style={
                        Object {
                          "height": 0,
                          "left": 0,
                          "overflow": "scroll",
                          "position": "absolute",
                          "top": 0,
                          "visibility": "hidden",
                          "whiteSpace": "pre",
                        }
                      }
                    >
                      
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="css-1wy0on6"
              >
                <span
                  className="css-d8oujb"
                />
                <div
                  aria-hidden="true"
                  className="css-1ep9fjw"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="css-19bqh2r"
                    focusable="false"
                    height={20}
                    viewBox="0 0 20 20"
                    width={20}
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-podSizeMinimum"
        >
          Minimum Pod Size
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue={3}
            disabled={false}
            id="tournament-podSizeMinimum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="number"
            value={undefined}
          />
        </div>
      </div>
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-137 MuiFormControl-marginNormal-138 TournamentSettings-field-106"
      >
        <label
          className="MuiFormLabel-root-146 MuiInputLabel-root-141 MuiInputLabel-formControl-142 MuiInputLabel-animated-145"
          data-shrink={false}
          htmlFor="tournament-podSizeMaximum"
        >
          Maximum Pod Size
          <span
            className="MuiFormLabel-asterisk-150"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-151 MuiInput-formControl-152 MuiInput-underline-155"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-159 MuiInput-inputType-162"
            defaultValue={4}
            disabled={false}
            id="tournament-podSizeMaximum"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={true}
            rows={undefined}
            type="number"
            value={undefined}
          />
        </div>
      </div>
    </div>
    <hr
      className="MuiDivider-root-174"
    />
    <div
      className="MuiCardActions-root-178"
    />
  </div>
</div>
`;
